--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 *
 {
     margin:0;
@@ -10,25 +11,26 @@ Html,body
     width:100%;
 
 }
-.main{
-    height:100%;
-    width:100%;
-    display:flex;
-    gap:10px;
-    color:aliceblue;
-    background-color:#000000;
-    /* overflow: hidden; */
-}
-.left{
-    width:25%;
+
+.main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 100%;
+    width: 100%;
+    color: aliceblue;
+    background-color: #000000;
+  }
+  .left {
+    grid-column: 1;
+    width: 25%;
     margin-top: 10px;
     margin-left: 10px;
-    margin-right: 10px;
-    background-color:#000000;
-    height:98%;
+    /* margin-right: 10px; */
+    background-color: #000000;
+    height: 98%;
     display: flex;
-    flex-direction:column;
-}
+    flex-direction: column;
+  }
 .imag{
     height:30px;
     padding-left: 10px;
@@ -43,7 +45,7 @@ Html,body
 }
 .left .left-top{
     height:120px;
-    width:100%;
+    width:209%;
     display: flex;
     flex-direction: column;
     border-radius: 15px;
@@ -70,6 +72,7 @@ Html,body
     background-color: #121212;
     border-radius: 15px;
     /* overflow:auto; */
+    width: 209%;
 }
 .left .left-bottom .library{
     margin-top: 10px;
@@ -158,13 +161,14 @@ Html,body
     font-weight:400;
     font-family:poppins;
 }
-.right{
-    height:560.5px;
-    width:75%;
-    margin-top:10px;
-    background-image: linear-gradient(to bottom, #060b51 0%, #020511  51%, black  100%);
+.right {
+    grid-column: 2 / 3;
+    height: 560.5px;
+    width: 100%;
+    margin-top: 10px;
+    background-image: linear-gradient(to bottom, #060b51 0%, #020511 51%, black 100%);
     border-radius: 10px;
-}
+  }
 .right-top{
     height: 100px;
     width: 100%;
